fixed alignment
fixed the alignment of the sldier in the desktop view

--- a/src/components/UI/Carousel/styles.css
+++ b/src/components/UI/Carousel/styles.css
@@ -1,5 +1,6 @@
 .embla {
   overflow: hidden;
+  text-align: center;
 }
 .embla__container {
   display: flex;
